--- a/rich_vue/vue01.html
+++ b/rich_vue/vue01.html
@@ -68,7 +68,7 @@
                 ]
             }
         })
-        //app4.b.push({text:'세번째??'})
+        app4.b.push({text:'세번째??'})
     </script>
 </body>
 </html>
